2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release
        
2011-01-29  Brian Mattern

        Fix bug when you have an empty <Name></Name> in a menu

2011-01-30  Carsten Haitzler (The Rasterman)

        Fix tests to not build clearenv related code if not available

2011-01-31  Sebastian Dransfeld

	* Fix memleak, free cache icons after retrival

2011-01-31  Sebastian Dransfeld

	* Improve storage of desktop util data