@@ -17,3 +17,7 @@
 2011-01-31  Sebastian Dransfeld
 
 	* Improve storage of desktop util data
+
+2011-01-31  Sebastian Dransfeld
+
+	* Add temporary memory cache of eet file data
